# History-Matching-Core

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
history_matching/emulator/: emulator.py  gp_emulator.py
history_matching/samples/: sample_space.py
src/history_matching/emulator/: __init__.py  emulator.py  gp_emulator.py  implausibility.py
src/history_matching/samples/: __init__.py  sample_space.py
src/history_matching_core/samples/: sample_space.py  stats.py
src/history_matching_old/emulator/: __init__.py  gp_emulator.py  implausibility.py
src/history_matching_old/samples/: sample_space.py
tests/: test_sample_space.py
