[build-system]
requires = ["setuptools>=61.0","netcdf4>=1.6.2","xarray>=2023.2.0","joblib>=1.2.0","numpy>=1.24.2","pyDOE>=0.3.8","scikit-learn>=1.2.1","scipy>=1.10.0","threadpoolctl>=3.1.0"]
build-backend = "setuptools.build_meta"
[project]
name = "history_matching"
version = "0.0.22"
authors = [
  { name="Robert King", email="robcking@stanford.edu" },
]
description = "Package contains helper modules for using history matching for parameter optimzation."
dependencies = ["netcdf4>=1.6.2","xarray>=2023.2.0","joblib>=1.2.0","numpy>=1.24.2","pyDOE>=0.3.8","scikit-learn>=1.2.1","scipy>=1.10.0"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OneOneFour/History-Matching-Core"
[tool.isort]
profile = "black"